--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 1;
+  background-color: lightgray;
 }
 
 textarea{
@@ -37,9 +38,8 @@ textarea{
 }
 
 .hour {
-  background-color: #ffffff;
   color: #000000;
-  border-top: 1px dashed #000000;
+
 }
 
 .past {
@@ -69,3 +69,5 @@ textarea{
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
+
+
